# AlgorithmicChallenges

./: AsyncLogger.cpp  AsyncLogger.h  BasicCalculator.cpp  BasicCalculator.h  CMakeLists.txt  FourSum.cpp  FourSum.h  GenerateParentheses.cpp  GenerateParentheses.h  LicenseKeyFormatting.cpp  LicenseKeyFormatting.h  LongestPalindromicSubstring.cpp  LongestPalindromicSubstring.h  LongestUniqCharsSubstr.cpp  LongestUniqCharsSubstr.h  MaxPointsOnALine.cpp  MaxPointsOnALine.h  PoorPigs.cpp  PoorPigs.h  RandomizedSet.cpp  RandomizedSet.h  StringOneAway.cpp  SubStringSearchKMP.cpp  SubStringSearchKMP.h  WORKSPACE  WordSearch.cpp  WordSearch.h  main.cpp
cpp/: CMakeLists.txt
cpp/CrackingTheCodeInterview/1_ArraysAndStrings/: 1_IsUnique.cpp  1_IsUnique.h  1_IsUniqueTest.cpp  2_CheckPermutation.cpp  2_CheckPermutation.h  2_CheckPermutationTest.cpp  3_URLify.cpp  3_URLify.h  3_URLifyTest.cpp  4_PalindromePermutation.cpp  4_PalindromePermutation.h  4_PalindromePermutationTest.cpp  5_OneAway.cpp  5_OneAway.h  5_OneAwayTest.cpp  6_StringCompression.cpp  6_StringCompression.h  6_StringCompressionTest.cpp  7_RotateMatrix.cpp  7_RotateMatrix.h  7_RotateMatrixTest.cpp  8_ZeroMatrix.cpp  8_ZeroMatrix.h  8_ZeroMatrixTest.cpp  9_StringRotation.cpp  9_StringRotation.h  9_StringRotationTest.cpp
cpp/CrackingTheCodeInterview/2_LinkedLists/: 1_RemoveDups.cpp  1_RemoveDups.h  1_RemoveDupsTest.cpp  2_ReturnKthToLast.cpp  2_ReturnKthToLast.h  2_ReturnKthToLastTest.cpp  3_DeleteMiddleNode.cpp  3_DeleteMiddleNode.h  3_DeleteMiddleNodeTest.cpp  4_Partition.cpp  4_Partition.h  4_PartitionTest.cpp  5_SumLists.cpp  5_SumLists.h  5_SumListsTest.cpp  6_Palindrome.cpp  6_Palindrome.h  6_PalindromeTest.cpp  7_Intersection.cpp  7_Intersection.h  7_IntersectionTest.cpp  8_LoopDetection.cpp  8_LoopDetection.h
cpp/CrackingTheCodeInterview/3_StacksAndQueues/: 1_ThreeInOne.h  1_ThreeInOneTest.cpp  1_TreeInOne.cpp  2_StackMin.cpp  2_StackMin.h  2_StackMinTest.cpp  3_StackOfPlates.h  3_StackOfPlatesTest.cpp  4_QueueViaStacks.h  5_SortStack.h  5_SortStackTest.cpp  6_AnimalShelter.h  6_AnimalShelterTest.cpp
cpp/CrackingTheCodeInterview/4_TreesAndGraphs/: 10_CheckSubtree.h  10_CheckSubtreeTest.cpp  11_RandomNode.cpp  11_RandomNode.h  11_RandomNodeTest.cpp  12_PathsWithSum.h  12_PathsWithSumTest.cpp  1_RouteBetweenNodes.cpp  1_RouteBetweenNodes.h  1_RouteBetweenNodesTest.cpp  2_MinimalTree.cpp  2_MinimalTree.h  2_MinimalTreeTest.cpp  3_ListOfDepth.cpp  3_ListOfDepth.h  3_ListOfDepthTest.cpp  4_CheckBalanced.cpp  4_CheckBalanced.h  4_CheckBalancedTest.cpp  5_ValidateBST.h  6_Successor.h  6_SuccessorTest.cpp  7_BuildOrder.h  7_BuildOrderTest.cpp  8_FirstCommonAncestor.h  8_FirstCommonAncestorTest.cpp  9_BstSequences.h  9_BstSequencesTest.cpp
cpp/CrackingTheCodeInterview/5_BitManipulation/: 1_Insertion.h  1_InsertionTest.cpp  3_FlipBitToWin.h  3_FlipBitToWinTest.cpp  6_Conversion.h  6_ConversionTest.cpp  7_PairwiseSwap.h  7_PairwiseSwapTest.cpp  8_DrawLine.h  8_DrawLineTest.cpp
cpp/hackerrank/: Array2D.h  ConnectedCellInGrid.h  DPCoinChange.h  HashTablesRansomNote.h  LinkedListsDetectCycle.h  QueuesATaleOfTwoStacks.h  RoadsAndLibs.h  SortingBubbleSort.h  SortingComparator.h  StacksBalancedBrackets.h  TreesIsThisABinarySearchTree.h  TriesContacts.h
cpp/hackerrank/DP/: CoinChange.h  Knapsack.h  PlayWithWords.h
cpp/hackerrank/tests/: Array2DTest.cpp  BinarySearchIceCreamParlorTest.cpp  TriesContactsTest.cpp
cpp/leetcode/: BasicCalculator.h  FourSum.h  LongestUniqCharsSubstr.h  MaxPointsOnALine.h  RandomizedSet.h  StringOneAway.h  SubStringSearchKMP.h
cpp/leetcode/BinaryIndexedTree/: 307_RangeSumQueryMutable.h  307_RangeSumQueryMutableTest.cpp
cpp/leetcode/BiweeklyContest11/: 1229_MeetingScheduler.h  1230_TossStrangeCoins.h  Solution.h  SolutionTest.cpp
cpp/leetcode/BiweeklyContest13/: 1256_EncodeNumber.h  1257_SmallestCommonRegion.h  1258_SynonymousSentences.h
cpp/leetcode/BiweeklyContest18/: Solution.h  SolutionTest.cpp
cpp/leetcode/FromAlgorithmsCourse/: 1136_ParallelCourses.h  1192_CriticalConnectionsInNetwork.cpp  1192_CriticalConnectionsInNetwork.h  1288_RemoveCoveredIntervals.h  128_LongestConsecutiveSequence.h  169_MajorityElement.h  229_MajorityElementII.h  229_MajorityElementIITest.cpp  295_FindMedianFromDataStream.h  295_FindMedianFromDataStreamTest.cpp  310_MinimumHeightTrees.h  327_CountOfRangeSum.h  332_ReconstructItinerary.h  547_FriendCircles.h  587_ErectTheFenceTest.cpp  587_ErectTheFenceTest.h  684_RedundantConnection.h  684_RedundantConnectionTest.cpp  687_LongestUnivaluePath.h  75_SortColors.h  773_SlidingPuzzle.h  773_SlidingPuzzleTest.cpp  850_RectangleAreaII.h  850_RectangleAreaIITest.cpp  943_FindTheShortestSuperstring.h  943_FindTheShortestSuperstringTest.cpp
cpp/leetcode/Google/: 1011_CapacityToShipPackagesWithinDDays.h  1032_StreamOfCharacters.h  1032_StreamOfCharactersTest.cpp  1055_ShortestWayToFormString.h  1057_CampusBikes.h  1066_CampusBikesIITest.cpp  1096_BraceExpansionII.h  1219_PathWithMaximumGoldTest.cpp  158_CharactersGivenRead4CallMultipleTimes.h  1_TwoSum.cpp  1_TwoSum.h  200_NumberOfIslands.h  200_NumberOfIslandsTest.cpp  253_MeetingRoomsII.h  253_MeetingRoomsIITest.cpp  271_EncodeAndDecodeStrings.h  299_BullsAndCows.h  315_CountOfSmallerNumbersAfterSelf.h  315_CountOfSmallerNumbersAfterSelfTest.cpp  329_LongestIncreasingPathInMatrixTest.cpp  334_IncreasingTripletSubsequence.h  359_LoggerRateLimiter.h  394_DecodeString.h  394_DecodeStringTest.cpp  410_SplitArrayLargestSum.cpp  42_TrappingWatter.h  430_FlattenMultilevelDoublyLinkedList.h  465_OptimalAccountBalancing.h  465_OptimalAccountBalancingTest.cpp  489_RobotRoomCleaner.h  528_RandomPickWithWeight.h  552_StudentAttendanceRecordII.h  642_DesignSearchAutocompleteSystem.cpp  (+19 more)
cpp/sedgewick/: BagsQueuesStacks_1.3.10_InfixToPostfix.h  BagsQueuesStacks_1.3.11_EvaluatePostfix.h  BagsQueuesStacks_1.3.37_JosephusProblem.h  BagsQueuesStacks_1.3.38_DeleteKthElement.h  BagsQueuesStacks_1.3.9_FixInfixExpression.h  FibonacciNumber.h  GreatestCommonDivisor.cpp  GreatestCommonDivisor.h  PostfixExprEval.cpp  PostfixExprEval.h
(+324 files in other folders)
